--- a/first project.html
+++ b/first project.html
@@ -18,7 +18,7 @@
     </div>
 
     <nav class="naver">
-      <a href="http://127.0.0.1:5500/protfolio%20my%20first/first%20project.html" class="active">Home</a>
+      <a href="https://abdullahad1.github.io/developer-portfolio-myfirst/first%20project.html" class="active">Home</a>
       <a href="#">About</a>
       <a href="#">Services</a>
       <a href="#">Portfolio</a>
